# ADAC-PRJ1

./: .gitignore  README.md  SKILL.md  rule.md
1Docs/: README.md  Technical Info.md
2Designs/: README.md
3Codes/: README.md
3Codes/SmartFarm_ESP32/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
3Codes/SmartFarm_ESP32/main/: CMakeLists.txt  app_config.h  main.c  mqtt_handler.c  mqtt_handler.h  power_manager.c  power_manager.h  sensor_data.h  sensor_store.c  sensor_store.h  uart_handler.c  uart_handler.h  web_server.c  web_server.h  wifi_manager.c  wifi_manager.h
3Codes/SmartFarm_STM32/: .cproject  .mxproject  .project  README.md  STM32_Task.md  SmartFarm_STM32.ioc  SmartFarm_STM32.launch
3Codes/SmartFarm_STM32/App/Inc/: communication_manager.h  control_manager.h  display_manager.h  schedule_manager.h
3Codes/SmartFarm_STM32/App/Src/: communication_manager.c  control_manager.c  display_manager.c  schedule_manager.c
3Codes/SmartFarm_STM32/Common/Inc/: app_config.h  app_defs.h  app_types.h  app_version.h  debug_log.h  timing.h
3Codes/SmartFarm_STM32/Common/Src/: app_config.c  debug_log.c  timing.c
3Codes/SmartFarm_STM32/Core/Inc/: main.h  (+2 more)
3Codes/SmartFarm_STM32/Debug/: SmartFarm_STM32.elf  SmartFarm_STM32.hex  SmartFarm_STM32.list  SmartFarm_STM32.map  makefile  objects.list  sources.mk
4Demos/: README.md
5Refs/: README.md
5Refs/Devices/: README.md
5Refs/ESP32/: README.md
5Refs/STM32/: README.md
cpp-embedded-1.0.0/: SKILL.md
cpp-embedded-1.0.0/.embedder/: bootstrap-context-prod.enc
cpp-embedded-1.0.0/references/: coding-style-misra-c.md
(+102 files in other folders)
